# qwen3.c

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.dev.txt  requirements.pin  requirements.txt  runq.c
examples/: CMakeLists.txt  model.c  qwen.c  runq.c  tokenizer.c  weights.c
include/: checkpoint.h  completion.h  forward.h  model.h  q8.h  qwen.h  sampler.h  tokenizer.h
qwen3/: __main__.py  convert.py  model.py  tokenizer.py  weights.py
src/: checkpoint.c  completion.c  forward.c  model.c  q8.c  qwen.c  sampler.c  tokenizer.c  xorshift.c
